update personal info&pwd

--- a/src/index.css
+++ b/src/index.css
@@ -459,7 +459,7 @@
 }
 
 .top-tabs>div {
-    max-width: 15%;
+    max-width: 13%;
     text-align: center;
     font-size: 24px;
     font-weight: 600;
@@ -1169,6 +1169,104 @@
     transform: translateY(-40px);
 }
 
+#toast, #toast_success {
+    visibility: hidden;
+    max-width: 50px;
+    height: 50px;
+    /*margin-left: -125px;*/
+    margin: auto;
+    background-color: rgb(235, 59, 90);
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+
+    position: fixed;
+    z-index: 1;
+    left: 0;right:0;
+    top: 10%;
+    font-size: 17px;
+    white-space: wrap;
+}
+#toast_success {
+
+    background-color: rgb(0, 184, 148);
+
+}
+#toast #img, #toast_success #img{
+	width: 50px;
+	height: 50px;
+    float: left;   
+    padding-top: 16px;
+    padding-bottom: 16px; 
+    box-sizing: border-box;
+    background-color: #111;
+    color: #fff;
+}
+#toast #desc, #toast_success #desc{
+
+    
+    color: #fff;
+   
+    padding: 16px;
+    
+    overflow: hidden;
+	white-space: nowrap;
+}
+
+#toast.show, #toast_success.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, expand 0.5s 0.5s,stay 3s 1s, shrink 0.5s 2s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, expand 0.5s 0.5s,stay 3s 1s, shrink 0.5s 4s, fadeout 0.5s 4.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {top: 0; opacity: 0;} 
+    to {top: 10%; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {top: 0; opacity: 0;}
+    to {top: 10%; opacity: 1;}
+}
+
+@-webkit-keyframes expand {
+    from {min-width: 50px} 
+    to {min-width: 350px}
+}
+
+@keyframes expand {
+    from {min-width: 50px}
+    to {min-width: 350px}
+}
+@-webkit-keyframes stay {
+    from {min-width: 350px} 
+    to {min-width: 350px}
+}
+
+@keyframes stay {
+    from {min-width: 350px}
+    to {min-width: 350px}
+}
+@-webkit-keyframes shrink {
+    from {min-width: 350px;} 
+    to {min-width: 50px;}
+}
+
+@keyframes shrink {
+    from {min-width: 350px;} 
+    to {min-width: 50px;}
+}
+
+@-webkit-keyframes fadeout {
+    from {top: 10%; opacity: 1;} 
+    to {top: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {top: 10%; opacity: 1;}
+    to {top: 0; opacity: 0;}
+}
+  
 
 @media (max-width : 1440px) {
     .main-container>div {
